fixed header position filter covers left

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,6 +1,11 @@
 .nav {
   padding: var(--grid-margin-vertical) var(--grid-margin-horizontal);
 }
+header {
+  background-color: var(--off-white);
+  position: sticky;
+  top: 0;
+}
 .absolute-container {
   height: 100vh;
   position: fixed;
@@ -61,10 +66,11 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
   /* position: fixed; */
-  right: 0;
+  /* right: 0;
   top: 0;
-  bottom: 0;
+  bottom: 0; */
   padding: calc(13.5px + var(--grid-margin-vertical))
     var(--grid-margin-horizontal);
   margin-top: calc(-13.5px - var(--grid-margin-vertical));
@@ -81,6 +87,7 @@
   inset: 0;
   content: "";
   background-color: var(--translucent);
+  z-index: -1;
 }
 .no-display {
   display: none;
